# tauri-template-v1

./: package.json
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  build.yaml
src-tauri/: Cargo.toml  tauri.conf.json
